--- a/index.html
+++ b/index.html
@@ -77,31 +77,42 @@
         </ol>
       </section>
       <section class="produce">
-        <div class="produce-title"><h2 class="secondary-title">ЧЕМ МЫ ЗАНИМАЕМСЯ</h2></div>
+        <div class="produce-title">
+          <h2 class="secondary-title">ЧЕМ МЫ ЗАНИМАЕМСЯ</h2>
+        </div>
         <ol class="produce-list">
           <li class="produce-item">
-            <img class="produce-item-image" src="https://github.com/Pvlvlkv/goit-markup-hw-02/blob/master/image/what-we-are-doing/box1.png?raw=true" alt="box1" />
+            <img class="produce-item-image"
+              src="https://github.com/Pvlvlkv/goit-markup-hw-02/blob/master/image/what-we-are-doing/box1.png?raw=true"
+              alt="box1" />
             <p class="produce-item-title">ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ</p>
           </li>
           <li class="produce-item">
-            <img class="produce-item-image" src="https://github.com/Pvlvlkv/goit-markup-hw-02/blob/master/image/what-we-are-doing/box.png?raw=true" alt="box" />
+            <img class="produce-item-image"
+              src="https://github.com/Pvlvlkv/goit-markup-hw-02/blob/master/image/what-we-are-doing/box.png?raw=true"
+              alt="box" />
             <p class="produce-item-title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
           </li>
           <li class="produce-item">
-            <img class="produce-item-image" src="https://github.com/Pvlvlkv/goit-markup-hw-02/blob/master/image/what-we-are-doing/design-decisions.png?raw=true" alt="design-decisions" />
+            <img class="produce-item-image"
+              src="https://github.com/Pvlvlkv/goit-markup-hw-02/blob/master/image/what-we-are-doing/design-decisions.png?raw=true"
+              alt="design-decisions" />
             <p class="produce-item-title">ДИЗАЙНЕРСКИЕ ПРИЛОЖЕНИЯ</p>
           </li>
         </ol>
       </section>
       <section class="teem">
-        <div class="teem-title"><h2 class="secondary-title">Наша команда</h2></div>
+        <div class="teem-title">
+          <h2 class="secondary-title">Наша команда</h2>
+        </div>
         <ol class="teem-list">
           <li class="teem-item">
-            <img class="teem-item-image" src="https://github.com/Pvlvlkv/goit-markup-hw-01/blob/master/image/Our-teem/human.png?raw=true"
+            <img class="teem-item-image"
+              src="https://github.com/Pvlvlkv/goit-markup-hw-01/blob/master/image/Our-teem/human.png?raw=true"
               alt="John Smith" />
             <p class="employee-name">John Smith</p>
             <p class="employee-specialization">Product Designer</p>
-           <ol class="employee-social">
+            <ol class="employee-social">
               <li class="item"><a href="">1</a></li>
               <li class="item"><a href="">2</a></li>
               <li class="item"><a href="">3</a></li>
@@ -109,19 +120,21 @@
             </ol>
           </li>
           <li class="teem-item">
-          <img class="teem-item-image"  src="https://github.com/Pvlvlkv/goit-markup-hw-01/blob/master/image/Our-teem/human1.png?raw=true"
-            alt="Marta Stewart" />
-          <p class="employee-name">Marta Stewart</p>
-          <p class="employee-specialization">Frontend Developer</p>
-          <ol class="employee-social">
-            <li class="item"><a href="">1</a></li>
-            <li class="item"><a href="">2</a></li>
-            <li class="item"><a href="">3</a></li>
-            <li class="item"><a href="">4</a></li>
-          </ol>
+            <img class="teem-item-image"
+              src="https://github.com/Pvlvlkv/goit-markup-hw-01/blob/master/image/Our-teem/human1.png?raw=true"
+              alt="Marta Stewart" />
+            <p class="employee-name">Marta Stewart</p>
+            <p class="employee-specialization">Frontend Developer</p>
+            <ol class="employee-social">
+              <li class="item"><a href="">1</a></li>
+              <li class="item"><a href="">2</a></li>
+              <li class="item"><a href="">3</a></li>
+              <li class="item"><a href="">4</a></li>
+            </ol>
           </li>
           <li class="teem-item">
-            <img class="teem-item-image"  src="https://github.com/Pvlvlkv/goit-markup-hw-01/blob/master/image/Our-teem/human2.png?raw=true"
+            <img class="teem-item-image"
+              src="https://github.com/Pvlvlkv/goit-markup-hw-01/blob/master/image/Our-teem/human2.png?raw=true"
               alt="robert Jakis" />
             <p class="employee-name">Robert Jakis</p>
             <p class="employee-specialization">Marketing</p>
@@ -133,7 +146,8 @@
             </ol>
           </li>
           <li class="teem-item">
-            <img class="teem-item-image" src="https://github.com/Pvlvlkv/goit-markup-hw-01/blob/master/image/Our-teem/human3.png?raw=true"
+            <img class="teem-item-image"
+              src="https://github.com/Pvlvlkv/goit-markup-hw-01/blob/master/image/Our-teem/human3.png?raw=true"
               alt="Martin Doe" />
             <p class="employee-name">Martin Doe</p>
             <p class="employee-specialization">UI Designer</p>
@@ -147,7 +161,9 @@
         </ol>
       </section>
       <section class="clients">
-        <div class="clients-title"><h3 class="secondary-title">Постоянные клиенты</h3></div>
+        <div class="clients-title">
+          <h3 class="secondary-title">Постоянные клиенты</h3>
+        </div>
         <ol class="clients-list">
           <li class="clients-item">
             <a href=""><img class="clients-item-image"
@@ -185,7 +201,8 @@
     <footer class="footer">
       <div class="footer-block">
         <div class="footer-contacts">
-          <a href="" class="link-condition web-studio-bot"><span class="blue">Web</span> <span class="black">Studio</span></a>
+          <a href="" class="link-condition web-studio-bot"><span class="blue">Web</span> <span
+              class="black">Studio</span></a>
           <address>
             <a href="" class="link-condition map-address-bot">г. Киев, пр-т Леси Украинки, 26</a>
             <p class="address-link-bot">info@example.com</p>
